--- a/src/index.css
+++ b/src/index.css
@@ -96,26 +96,139 @@ nav {
     color: white;
   }
 }
-.header-container {
-  background-image: url(https://gatsby-airtable-design-project.netlify.app/static/1f9f464a8fc63e93d102df52fd3ee874/c0672/mainBcg.webp);
-  height: 780px;
-  background-repeat: no-repeat;
-  background-size: 100%;
+@media screen and (max-width: 767px) {
+  .header-container {
+    background-image: url(https://gatsby-airtable-design-project.netlify.app/static/1f9f464a8fc63e93d102df52fd3ee874/c0672/mainBcg.webp);
+    height: 780px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+  .overlay {
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    height: 67%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  .head {
+    margin-left: 40px;
+    padding: 15px;
+    margin-bottom: 10px;
+    font-size: 35px;
+    color: white;
+  }
+  .button {
+    text-transform: uppercase;
+    padding: 15px;
+    background-color: gray;
+    border: 2px solid white;
+    border-radius: 3px;
+    color: white;
+    margin-left: 55px;
+  }
+  .body {
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 1.5rem;
+    color: white;
+    margin-top: 60px
+  }
+  .par {
+    text-align: center;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: white;
+  }
+  .button2 {
+    text-align: center;
+    border: 2px solid white;
+    border-radius: 3px;
+    background-color: gray;
+    padding: 15px;
+    color: white;
+    margin-top: 20px;
+    text-transform: uppercase;
+  }
 }
-.head {
-  margin-left: 40px;
-  padding: 15px;
-  margin-bottom: 10px;
-  font-size: 35px;
+@media screen and (min-width: 768px) {
+  .header-container {
+    background-image: url(https://gatsby-airtable-design-project.netlify.app/static/1f9f464a8fc63e93d102df52fd3ee874/c0672/mainBcg.webp);
+    height: 780px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+  .overlay {
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    height: 105%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  .head {
+    margin-left: 250px;
+    padding: 15px;
+    margin-bottom: 10px;
+    font-size: 40px;
+    color: white;
+  }
+  .button {
+    text-transform: uppercase;
+    padding: 20px;
+    background-color: gray;
+    border: 2px solid white;
+    border-radius: 3px;
+    color: white;
+    margin-left: 265px;
+    font-size: 15px;
+  }
+  .body {
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 1.5rem;
+    color: white;
+    margin-top: 60px;
+    font-size: 35px;
+  }
+  .par {
+    text-align: center;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: white;
+    font-size: 3rem;
+  }
+  .button2 {
+    text-align: center;
+    border: 2px solid white;
+    border-radius: 3px;
+    background-color: gray;
+    padding: 20px;
+    color: white;
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-size: 15px;
+  }
 }
-.button {
+.button:hover {
   text-transform: uppercase;
   padding: 15px;
-  background-color: rgb(63, 63, 146);
-  border: none;
+  background-color: white;
+  border: 2px solid white;
   border-radius: 3px;
-  color: white;
-  margin-left: 55px;
+  color: black;
+}
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+.button2:hover {
+  text-align: center;
+  border: 2px solid white;
+  border-radius: 3px;
+  background-color: white;
+  padding: 15px;
+  color: black;
 }
 @media screen and (max-width: 766px) {
   .navMenu li .navLink {
@@ -306,7 +419,7 @@ footer h4 span {
 }
 .card {
   width: 350px;
-  height: 300px;
+  height: 410px;
   margin-top: 50px;
   margin-left: 20px;
 }
@@ -324,16 +437,14 @@ footer h4 span {
 }
 .typo {
   text-align: center;
-  padding: 16px;
 }
 .body2 {
-  padding: 20px;
   text-align: center;
 }
 @media screen and (max-width: 767px) {
   .service-container {
     background-color: whitesmoke;
-    height: 760px;
+    height: 960px;
     width: 100%;
   }
 }
@@ -342,5 +453,56 @@ footer h4 span {
     background-color: whitesmoke;
     height: 750px;
     width: 100%;
+  }
+}
+.head4 {
+  text-align: center;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  text-transform: capitalize;
+  font-size: 2rem;
+}
+.buttons {
+  display: flex;
+  margin-bottom: 0px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.buttons button {
+  margin: 0.5rem;
+  text-transform: capitalize;
+  background-color: transparent;
+  border: transparent;
+  color: hsl(209,23%,60%);
+  letter-spacing: 0.1rem;
+  font-size: 1rem;
+  padding: 0.25rem;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s linear;
+}
+.buttons button:hover,
+.buttons button.active {
+  box-shadow: 0px 1.5px 0 hsl(209,23%,60%);
+}
+@media screen and (max-width: 767px) {
+  img {
+    width: 70%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 30px;
+    height: 350px;
+    margin-top: 40px;
+    margin-left: 150px;
+  }
+}
+@media screen and (min-width: 768px) {
+  img {
+    width: 30%;
+    height: 250px;
+    grid-template-columns: repeat(1, 1fr);
+    margin-left: 40px;
+    margin-top: 40px;
+    margin-bottom: 20px;
   }
 }
