--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@ nav {
 @media screen and (max-width: 767px) {
   .header-container {
     background-image: url(https://gatsby-airtable-design-project.netlify.app/static/1f9f464a8fc63e93d102df52fd3ee874/c0672/mainBcg.webp);
-    height: 780px;
+    height: 500px;
     background-repeat: no-repeat;
     background-size: 100%;
   }
@@ -108,7 +108,7 @@ nav {
     top: 80px;
     left: 0;
     width: 100%;
-    height: 67%;
+    height: 67.5%;
     background-color: rgba(0, 0, 0, 0.5);
   }
   .head {
@@ -163,7 +163,7 @@ nav {
     top: 80px;
     left: 0;
     width: 100%;
-    height: 105%;
+    height: 103%;
     background-color: rgba(0, 0, 0, 0.5);
   }
   .head {
@@ -494,6 +494,7 @@ footer h4 span {
     height: 350px;
     margin-top: 40px;
     margin-left: 150px;
+    margin-bottom: 50px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -503,6 +504,40 @@ footer h4 span {
     grid-template-columns: repeat(1, 1fr);
     margin-left: 40px;
     margin-top: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
   }
+}
+article h4 {
+  text-transform: uppercase;
+  color: hsl(21, 62%, 45%);
+  margin-bottom: 0.25rem;
+  text-align: center;
+}
+.title {
+  text-transform: capitalize;
+  margin-bottom: 0.75rem;
+  color: hsl(21, 81%, 29%);
+  text-align: center;
+}
+.text {
+  max-width: 35em;
+  margin: 0 auto;
+  margin-top: 2rem;
+  line-height: 2;
+  color: hsl(210, 22%, 49%);
+  margin-bottom: 20px;
+}
+.person-img {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  margin-bottom: 1rem;
+  border: 4px solid hsl(210, 31%, 80%);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  margin-left: 300px;
+}
+.reviews {
+  text-align: center;
+  font-size: 2rem;
 }
