--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@ nav {
     top: 80px;
     left: 0;
     width: 100%;
-    height: 67.5%;
+    height: 67%;
     background-color: rgba(0, 0, 0, 0.5);
   }
   .head {
@@ -163,7 +163,7 @@ nav {
     top: 80px;
     left: 0;
     width: 100%;
-    height: 103%;
+    height: 102%;
     background-color: rgba(0, 0, 0, 0.5);
   }
   .head {
@@ -456,11 +456,20 @@ footer h4 span {
   }
 }
 .head4 {
-  text-align: center;
   margin-bottom: 2rem;
   margin-top: 2rem;
   text-transform: capitalize;
   font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+}
+.head4 span {
+  font-size: 0.85em;
+  color: hsl(21, 62%, 45%);
+  margin-right: 1rem;
+  font-weight: 700;
 }
 .buttons {
   display: flex;
@@ -507,11 +516,26 @@ footer h4 span {
     margin-bottom: 50px;
   }
 }
+.section {
+  width: 90vw;
+  margin: 5rem auto;
+  max-width: 1170px;
+}
+.section-center {
+  margin: 0 auto;
+  margin-top: 4rem;
+  width: 80vw;
+  height: 450px;
+  max-width: 800px;
+  text-align: center;
+  position: relative;
+  display: flex;
+  overflow: hidden;
+}
 article h4 {
   text-transform: uppercase;
   color: hsl(21, 62%, 45%);
   margin-bottom: 0.25rem;
-  text-align: center;
 }
 .title {
   text-transform: capitalize;
@@ -535,9 +559,81 @@ article h4 {
   margin-bottom: 1rem;
   border: 4px solid hsl(210, 31%, 80%);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  margin-left: 300px;
+  margin-left: 230px;
 }
 .reviews {
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.5rem;
+}
+.reviews h2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+}
+.reviews span {
+  font-size: 0.85em;
+  color: hsl(21, 62%, 45%);
+  margin-right: 1rem;
+  font-weight: 700;
+}
+.prev,
+.next {
+  position: absolute;
+  top: 200px;
+  transform: translateY(-50%);
+  background-color: hsl(210, 22%, 49%);
+  color: #fff;
+  width: 1.25rem;
+  height: 1.25rem;
+  display: grid;
+  place-items: center;
+  border-color: transparent;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+.prev:hover,
+.next:hover {
+  background: hsl(21, 62%, 45%);
+}
+.prev {
+  left: 0;
+}
+.next {
+  right: 0;
+}
+article {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all 0.3s linear;
+}
+article.activeSlide {
+  opacity: 1;
+  transform: translateX(0);
+}
+article.lastSlide {
+  transform: translateX(-100%);
+}
+article.nextSlide {
+  transform: translateX(100%);
+}
+@media screen and (min-width: 768px) {
+  .text {
+    max-width: 55em;
+  }
+  .person-img {
+    margin-left: 0;
+  }
+  .prev,
+  .next {
+    width: 2rem;
+    height: 2rem;
+    font-size: 1.5rem;
+  }
 }
