--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,6 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
 }
-.section {
-  width: 90vw;
-  margin: 5rem auto;
-  max-width: 1170px;
-}
 nav {
   display: flex;
   align-items: center;
@@ -410,11 +405,13 @@ footer h4 span {
   }
 }
 .cards-container .card:hover {
-  background-color: hsl(21, 56%, 57%);
-  color: white;
+  background-color: hsl(21, 80%, 69%);
+  color: #fff;
+}
+.cards-container .body2:hover {
+  color: #fff;
 }
 .cards-container .typo:hover {
-  background-color: hsl(21, 56%, 57%);
   color: white;
 }
 .card {
@@ -517,9 +514,9 @@ footer h4 span {
   }
 }
 .section {
-  width: 90vw;
-  margin: 5rem auto;
-  max-width: 1170px;
+  background-color: whitesmoke;
+  padding: 5rem 0px;
+  position: relative;
 }
 .section-center {
   margin: 0 auto;
@@ -564,6 +561,7 @@ article h4 {
 .reviews {
   text-align: center;
   font-size: 1.5rem;
+  margin-top: 2rem;
 }
 .reviews h2 {
   display: flex;
@@ -635,5 +633,86 @@ article.nextSlide {
     width: 2rem;
     height: 2rem;
     font-size: 1.5rem;
+  }
+}
+.sect {
+  padding: 5rem 0px;
+  position: relative;
+}
+.sect .survey-center {
+  width: 90vw;
+  max-width: 1170px;
+  margin: 0 auto;
+}
+.head5 {
+  text-align: center;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+}
+.head5 span {
+  font-size: 0.85em;
+  color: hsl(21, 62%, 45%);
+  margin-right: 1rem;
+  font-weight: 700;
+}
+.sect .survey-center h3 {
+  text-align: center;
+  color: hsl(210,22%,49%);
+  margin-bottom: 4rem;
+}
+h3 {
+  letter-spacing: 0.1rem;
+  text-transform: capitalize;
+  line-height: 1.25;
+  font-weight: 400;
+}
+.sect .survey-center ul {
+  display: grid;
+  margin-top: 2rem;
+  gap: 2rem;
+}
+ul {
+  list-style-type: none;
+}
+.item {
+  background-color: #f1f5f8;
+  border-radius: 0.25rem;
+  padding: 0.75rem 1rem;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  gap: 0px 3rem;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+.item .key {
+  color: #fff;
+  font-size: 1.5rem;
+  background-color: hsl(21,65%,59%);
+  margin-left: 0.75rem;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+}
+h4 {
+  font-size: 0.88rem;
+  letter-spacing: 0.1rem;
+  text-transform: capitalize;
+  line-height: 1.3;
+  font-weight: 400;
+}
+p {
+  color: hsl(210,22%,49%);
+  letter-spacing: 0.1rem;
+}
+.buttonVote {
+  border-color: transparent;
+  font-size: 2.1rem;
+  color: black;
+}
+@media screen and (min-width: 768px) {
+  ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+    margin: 1rem;
   }
 }
