--- a/src/index.css
+++ b/src/index.css
@@ -392,16 +392,17 @@ footer h4 span {
 }
 @media screen and (min-width: 768px) {
   .cards-container {
-    width: 1200px;
-    height: 360px;
-    margin-left: 130px;
+    width: 1500px;
+    height: 350px;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(318px, 1fr));
   }
 }
 @media screen and (max-width: 600px) {
   .cards-container {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 20px;
+    grid-template-columns: repeat( 1fr);
+    grid-gap: 10px;
   }
 }
 .cards-container .card:hover {
