--- a/src/index.css
+++ b/src/index.css
@@ -492,28 +492,6 @@ footer h4 span {
 .buttons button.active {
   box-shadow: 0px 1.5px 0 hsl(209,23%,60%);
 }
-@media screen and (max-width: 767px) {
-  img {
-    width: 70%;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 30px;
-    height: 350px;
-    margin-top: 40px;
-    margin-left: 150px;
-    margin-bottom: 50px;
-  }
-}
-@media screen and (min-width: 768px) {
-  img {
-    width: 30%;
-    height: 250px;
-    grid-template-columns: repeat(1, 1fr);
-    margin-left: 40px;
-    margin-top: 40px;
-    margin-bottom: 50px;
-  }
-}
 .section {
   background-color: whitesmoke;
   padding: 5rem 0px;
@@ -557,7 +535,6 @@ article h4 {
   margin-bottom: 1rem;
   border: 4px solid hsl(210, 31%, 80%);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  margin-left: 230px;
 }
 .reviews {
   text-align: center;
@@ -717,3 +694,84 @@ p {
     margin: 1rem;
   }
 }
+.img {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 20px;
+}
+.image-container {
+  position: relative;
+}
+.custom-image {
+  width: 80%;
+  height: 400px;
+  margin-top: 30px;
+  margin-left: 90px;
+  margin-bottom: 50px;
+}
+.image-container:hover .image-overlay {
+  opacity: 0.8;
+  background-color: hsl(21, 65%, 59%);
+  width: 80%;
+  margin-left: 90px;
+  height: 400px;
+  margin-top: 30px;
+}
+@media screen and (min-width: 768px) {
+  .img {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    width: 1500px;
+  }
+  .custom-image {
+    width: 90%;
+    height: 400px;
+    margin-top: 40px;
+    margin-left: 40px;
+    margin-bottom: 50px;
+  }
+  .image-container:hover .image-overlay {
+    opacity: 0.8;
+    background-color: hsl(21, 65%, 59%);
+    width: 90%;
+    margin-left: 40px;
+    height: 400px;
+    margin-top: 40px;
+    margin-bottom: 50px;
+  }
+}
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  padding: 5px;
+  color: white;
+  text-align: center;
+  transition: .5s ease;
+  opacity: 0;
+}
+.text1 {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+} 
+.text2 {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+} 
